feat: post-processor to accept external shader code in the data folder